--- a/src/style.css
+++ b/src/style.css
@@ -293,16 +293,25 @@ header {
 
 .upload-button {
   background-color: white;
-  background-size: cover;
-  border: none;
-  cursor: pointer;
-  width: 380px;
+  color: #4CAF50;
+  border: 2px dashed #4CAF50;
+  border-radius: 10px;
+  width : 380px;
   height: 240px;
-  transition: background-color 0.3s ease;
+  text-align : center;
+  line-height: 240px;
+  margin : 10px;
+  cursor: pointer;
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
 
 .upload-button:hover, .upload-button.active {
-  background-color: gray;
+  background-color: #e8f5e9;
+  color:#388E3c;
+  border-color:  #388e3c;
 }
 
 .uploaded-image {
