Feat : Modify CSS & withdrawal

--- a/src/style.css
+++ b/src/style.css
@@ -180,8 +180,8 @@ header {
   align-items: center;
   z-index: 1;
   width: 405px;
-  border: 1px solid #bbb;
-  border-radius: 8px;
+  border: 1px solid #00a54c;
+  border-radius: 25px;
   padding: 10px 12px;
   font-size: 14px;
   z-index: 1;
