--- a/src/container/pages/Community/Community.css
+++ b/src/container/pages/Community/Community.css
@@ -55,11 +55,12 @@
 }
 
 .title{
-    font-size : 24px;
-    margin-top : 15px;
-    margin-bottom:-15px;
+    font-size : 20px;
+    margin-top : 10px;
+    margin-bottom:-25px;
 }
 .info{
+    font-size : 12px;
     color : gray;
     line-height:50px;
     border-bottom : 2px solid gray;
@@ -69,16 +70,28 @@
     user-select: none;
 }
 
+.mobile-table-container {
+    margin: auto;
+    width: 400px;
+}
 
 .table-container {
-    border: 1px solid #ddd;
+    border: none;
     border-collapse: collapse;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+                0 2px 4px rgba(0,0,0,0.07), 
+                0 4px 8px rgba(0,0,0,0.07), 
+                0 8px 16px rgba(0,0,0,0.07),
+                0 16px 32px rgba(0,0,0,0.07), 
+                0 32px 64px rgba(0,0,0,0.07);
     width: 1000px;
     margin: auto;
 }
 
 .table-container th, .table-container td {
-    border: 1px solid #747474;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-right: none;
     padding: 8px;
     text-align: center;
 }
@@ -89,10 +102,21 @@
 }
 
 .table-container th {
-    background-color: rgb(211, 211, 211);
+    background-color: #f4f4f4;
 }
 
-/* 여기부터는 이전 CSS 코드와 동일합니다. */
+.table-container th:hover {
+    background-color: #f5f5f5;
+}
+
+.mobile-search-controls {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between; 
+    padding: 10px;
+    box-sizing: border-box;
+}
 
 .search-controls {
     display: flex;
@@ -156,9 +180,9 @@
     cursor: pointer;
 }
 
-.writebutton {
+.greenbutton {
     padding: 8px 20px;
-    background-color: #008CBA;
+    background-color: #3B855D;
     width : 84px;
     height : 35px;
     color: white;
