--- a/src/style.css
+++ b/src/style.css
@@ -21,12 +21,13 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 50px;
+  height: 80px;
   user-select: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #00a54c;
+  background-color: white;
+  border-bottom: 3px solid #d8d8d8;
   z-index: 6;
 }
 
@@ -72,7 +73,7 @@ header {
 }
 
 .navbar__menu ul li a:hover {
-  color: white;
+  color: #00a54c;
 }
 
 .navbar__menu ul li a::before {
@@ -115,7 +116,7 @@ header {
     top: 0;
     right: 0;
     padding-top: 60px;
-    background-color: #00a54c;
+    background-color: white;
     transition: 0.3s;
     z-index: 500;
     overflow: hidden;
@@ -124,7 +125,7 @@ header {
   .side-menu button {
     border: none;
     font-size: 16px;
-    background-color: #00a54d;
+    background-color: white;
     font-weight: 500;
     position: absolute;
     left: 10px;
@@ -152,7 +153,7 @@ header {
   }
 
   .mobile-side a:hover {
-    color: white;
+    color: #00a54c;
   }
 
   .menu-open {
@@ -172,6 +173,7 @@ header {
   height : 70%
 }
 .separator {
+  color : rgb(196, 196, 196);
  padding-left: 20px;
  padding-right : 20px;
 }
