--- a/src/Button.css
+++ b/src/Button.css
@@ -14,7 +14,7 @@
     transition: background-color 0.3s;
 }
 
-/* 마우스 호버 시 배경색 변화 */
+
 .loginbutton:hover {
     background-color: #303030;
 }
@@ -38,13 +38,30 @@
     background-color: #808080;
     cursor:not-allowed;
 }
-/* 마우스 호버 시 배경색 변화 */
+
 .registerbutton:hover {
     background-color: #FF8C00;
 }
 
+.white-button{
+    width : 180px;
+    height : 50px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right : 15px;
+    color : #3B855D;
+    border-radius: 22px;
+    border : 3px solid #3B855D;
+    background-color: white;
+    cursor: pointer;
+}
 
-
+.white-button:hover{
+    color : white;
+    background-color: #3B855D;
+    border : none;
+    box-shadow: 0.3s;
+}
 .parent-element {
     text-align: right;
 }
@@ -57,22 +74,23 @@ body {
 }
 
 .cancelbutton {
-    margin-top: 20px;
+    margin-top: 60px;
     margin-left : 8px;
-    width:430px;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #6d6d6d;
+    padding: 8px 20px;
+    background-color: #c6c6c6;
+    width : 144px;
+    height : 45px;
     color: white;
-    text-align: center;
     font-size: 16px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
-    text-decoration: none;
     transition: background-color 0.3s;
 }
 
+.cancelbutton:hover {
+    background-color: #A5A5A5;
+}
 .activeBtn {
     background-color : #45a049;
     color : white;
@@ -140,6 +158,6 @@ body {
     src: url("fonts/Pretendard-Bold.woff2") format('truetype');
   }
   
-.unactiveBtn, .activeBtn, .searchbutton, .cancelbutton, .registerbutton, .loginbutton,.region-button {
+.unactiveBtn, .activeBtn, .white-button, .cancelbutton, .registerbutton, .loginbutton,.region-button {
     font-family: 'Pretendard-Bold';
 }
