--- a/src/container/pages/Community/Paging.css
+++ b/src/container/pages/Community/Paging.css
@@ -11,23 +11,15 @@
     text-align: center;
 }
   
-  .pagination li a {
+.pagination li a {
     padding: 5px 10px;
     text-decoration: none;
     color: #333;
-    border: 1px solid #ccc;
     border-radius: 25px;
-  }
-  
-  .pagination li.active a {
-    background-color: #00a54c;
-    color: #fff;
-    border: 1px solid #00a54c;
-  }
-  
+}
+
   .pagination li a:hover {
-    background-color: #00642f;
-    color: #fff;
-    border: 1px solid #00642f;
+    background-color: #D9d9d9;
+    border: 1px solid #d9d9d9;
   }
   
