--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
   padding-top : 1100px;
   display: grid;
   place-items: center;
-  height: 200vh; /* 필요에 따라 높이 설정 */
+  height: 200vh;
 }
 
 #grid {
@@ -209,6 +209,7 @@ header {
   padding:20px 10px;
   height: 190px;
   border-radius:25px;
+  transition: height 0.3s, box-shadow 0.3s;
   box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
   0 2px 4px rgba(0,0,0,0.07), 
   0 4px 8px rgba(0,0,0,0.07), 
@@ -255,7 +256,7 @@ header {
 }
 
 .list-item:not(:first-child) {
-  border-top: none; /* 첫 번째가 아닌 항목은 상단 테두리가 없도록 합니다 */
+  border-top: none;
 }
 .list-item:hover {
   background-color: #f2f2f2;
