--- a/src/container/pages/MyPageForm.css
+++ b/src/container/pages/MyPageForm.css
@@ -34,4 +34,71 @@
     color: #333;
   }
   
+  .myPage {
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 300px;
+    margin: 0 auto;
+  }
   
+  .myPage h1 {
+    text-align: center;
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .form-group label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .form-group input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+  }
+  
+  .form-group div {
+    color: #666;
+  }
+  
+  .info-update-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .info-update-button:hover {
+    background-color: #0056b3;
+  }
+  
+  @font-face {
+    font-family: 'Pretendard-Bold';
+    src: url("../../fonts/Pretendard-Bold.woff2") format('truetype');
+  }
+  .withdrawal-button{
+    width: 100%;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .withdrawal-button, .info-update-button {
+    font-family: 'Pretendard-Bold';
+  }
+
+  .white-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
