--- a/src/Button.css
+++ b/src/Button.css
@@ -66,6 +66,14 @@
     text-align: right;
 }
 
+.nothing-button {
+    border : none;
+    background-color: white;
+    color: #3B855D;
+    font-size : 25px;
+    cursor: pointer;
+}
+
 body {
     height: 100vh;
     display:flex;
