--- a/src/Button.css
+++ b/src/Button.css
@@ -42,7 +42,23 @@
 .registerbutton:hover {
     background-color: #FF8C00;
 }
+.write-green-button {
+    margin-left : 8px;
+    padding: 8px 20px;
+    background-color: #3B855D;
+    width : 104px;
+    height : 35px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
 
+.write-green-button:hover {
+    background-color: #2D6446;
+}
 .white-button{
     width : 180px;
     height : 50px;
@@ -137,6 +153,31 @@ body {
     cursor:pointer;
 }
 
+.gray-button {
+    padding: 8px 20px;
+    width : 220px;
+    height : 35px;
+    background-color: #a5a5a5;
+    color: white;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.disabled-write-button {
+    padding: 8px 20px;
+    width : 84px;
+    height : 35px;
+    margin-left: 60px;
+    background-color: #6d6d6d;
+    color: white;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
 .region-button {
     margin-top : 5px;
     padding: 8px 20px;
@@ -169,6 +210,6 @@ body {
     src: url("fonts/Pretendard-Bold.woff2") format('truetype');
   }
   
-.unactiveBtn, .activeBtn, .white-button, .cancelbutton, .registerbutton, .loginbutton,.region-button {
+.unactiveBtn, .activeBtn, .white-button, .disabled-write-button, .cancelbutton, .registerbutton, .loginbutton,.region-button, .gray-button, .write-green-button {
     font-family: 'Pretendard-Bold';
 }
