--- a/src/container/pages/Community/Community.css
+++ b/src/container/pages/Community/Community.css
@@ -142,9 +142,7 @@
 }
 
 .writebutton,
-.disabled-write-button {
-  margin-left: 60px;
-}
+
 
 .searchbutton {
     width : 80px;
@@ -203,38 +201,10 @@
 .greenbutton:hover {
     background-color: #2D6446;
 }
-.write-green-button {
-    margin-left : 8px;
-    padding: 8px 20px;
-    background-color: #3B855D;
-    width : 104px;
-    height : 35px;
-    color: white;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
 
-.write-green-button:hover {
-    background-color: #2D6446;
-}
 
 .writebutton:hover {
     background-color: #0073e6;
-}
-
-.disabled-write-button {
-    padding: 8px 20px;
-    width : 84px;
-    height : 35px;
-    background-color: #6d6d6d;
-    color: white;
-    font-size: 14px;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
 }
 
 
@@ -271,6 +241,6 @@
     src: url("../../../fonts/Pretendard-Bold.woff2") format('truetype');
   }
   
-.writebutton, .disabled-write-button, .searchBy-container, .write-green-button, .community-search-input, .sort-container, .greenbutton {
+.writebutton, .searchBy-container, .community-search-input, .sort-container, .greenbutton, .searchbutton {
     font-family: 'Pretendard-Bold';
 }
