--- a/src/container/pages/Community/Community.css
+++ b/src/container/pages/Community/Community.css
@@ -30,6 +30,57 @@
 
 #content_txt:focus { outline : none; }
 
+@media (max-width: 768px) {
+    #title_txt {
+        max-width: 80%;
+        font-size: 16px;
+    }
+    
+    #content_txt {
+        max-width: 30%;
+        max-height:40%;
+    }
+}
+
+@media (max-width: 480px) {
+    #title_txt {
+        max-width: 90%;
+        font-size: 16px;
+    }
+    
+    #content_txt {
+        max-width: 30%;
+        max-height:40%;
+    }
+}
+
+.quill-editor {
+    width: 100%;
+    max-width: 800px;
+    height: 250px;
+    margin-bottom: 40px;
+}
+
+@media (max-width: 1200px) {
+    .quill-editor {
+        max-width: 600px;
+        height: 200px;
+    }
+}
+
+@media (max-width: 768px) {
+    .quill-editor {
+        max-width: 100%;
+        height: 150px;
+    }
+}
+
+@media (max-width: 480px) {
+    .quill-editor {
+        max-width: 100%;
+        height: 100px;
+    }
+}
 
 .react-quill {
     width: 100%;
@@ -72,7 +123,7 @@
 
 .mobile-table-container {
     margin: auto;
-    width: 400px;
+    width: 360px;
 }
 
 .table-container {
@@ -142,10 +193,8 @@
 }
 
 .writebutton,
-
-
 .searchbutton {
-    width : 80px;
+    width : 60px;
 }
 .searchbutton, .sort-container {
     padding: 8px 12px;
@@ -183,6 +232,23 @@
     justify-content: center;
     align-items: center;
 }
+
+.location-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.location-button-container button:not(:last-child) {
+    margin-right : -95px;
+}
+
+@media screen and (max-width: 480px) {
+    .location-button-container button:not(:last-child) {
+        margin-right : -25px;
+    }
+}
+
 .greenbutton {
     margin-top: 60px;
     margin-left : 8px;
