--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,9 @@
 }
 
 .container_body {
-  padding-top : 1100px;
+  margin-top: 300px;
   display: grid;
   place-items: center;
-  height: 200vh;
 }
 
 #grid {
@@ -97,7 +96,7 @@ header {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .hide {
     visibility: visible;
   }
@@ -365,6 +364,45 @@ footer {
   padding: 20px;
   text-align: center;
   z-index: 6;
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.slide {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.active-slide {
+  display: block;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.5rem;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.arrow-left {
+  left: 1rem;
+}
+
+.arrow-right {
+  right: 1rem;
 }
 
 @font-face {
