Add : Bunri Community + CSS + etc

--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,10 @@
 }
 
 .container_body {
-  margin-top: 300px;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center; /* 수평 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
+  
 }
 
 #grid {
