--- a/src/container/pages/Community/Community.css
+++ b/src/container/pages/Community/Community.css
@@ -122,10 +122,13 @@
 }
 
 .mobile-table-container {
-    margin: auto;
+    margin-top: 500px;
     width: 360px;
 }
 
+.mobile-table-container tr {
+    cursor: pointer;
+}
 .table-container {
     border: none;
     border-collapse: collapse;
@@ -137,6 +140,10 @@
                 0 32px 64px rgba(0,0,0,0.07);
     width: 1000px;
     margin: auto;
+}
+
+.table-container tbody td:nth-child(2){
+    cursor: pointer;
 }
 
 .table-container th, .table-container td {
@@ -248,6 +255,88 @@
         margin-right : -25px;
     }
 }
+
+.adopted-content {
+    display: flex;
+    align-items: center;
+  }
+
+.adopted {
+    background-color: #00A54C;
+}
+
+.not-adopted {
+    background-color: #006d33;
+}
+
+.adopted, .not-adopted {
+    border-radius: 8px;
+    margin-right: 10px;
+    color : white;
+    font-size : 22px;
+    width : 95px;
+    height : 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.comment-container {
+    margin-top: 20px;
+  }
+  
+  .comment {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 2px 5px 5px 20px;
+    margin-bottom: 20px;
+    background-color: #f9f9f9;
+  }
+  
+  .comment-buttons {
+    display: flex;
+    gap: 10px;
+    margin-left : 805px;
+  }
+
+  .comment h4 {
+    margin-bottom: 5px;
+    color: #333;
+  }
+  
+  .comment p {
+    margin-bottom: 10px;
+    color: #555;
+  }
+  
+  .comment button {
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+    
+  .comment button:hover {
+    background-color: #ff6868;
+  }
+  
+  .modify-button, .delete-button {
+    background-color: #007bff;
+    color: #fff;
+    margin-right: 10px;
+  }
+  
+  .report-button {
+    background-color: #dc3545;
+    color: #fff;
+    margin-right: 10px;
+  }
+  
+  .adopt-button {
+    background-color: #28a745;
+    color: #fff;
+  }
 
 .greenbutton {
     margin-top: 60px;
