--- a/src/Button.css
+++ b/src/Button.css
@@ -106,6 +106,7 @@
     font-size: 20px;
     font-weight: bold;
     margin-right : 15px;
+    padding: 10px 20px;
     color : #3B855D;
     border-radius: 22px;
     border : 3px solid #3B855D;
@@ -209,7 +210,14 @@ body {
     cursor:pointer;
 }
 
-
+.direct-write-button{
+    margin-top: 10px;
+    margin-left: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    color: green;
+    margin-bottom: 80px;
+}
 .disabled-write-button {
     padding: 8px 20px;
     width : 84px;
@@ -255,6 +263,6 @@ body {
     src: url("fonts/Pretendard-Bold.woff2") format('truetype');
   }
   
-.unactiveBtn, .activeBtn, .white-button, .location-green-button, .disabled-write-button, .submitbutton, .cancelbutton, .registerbutton, .loginbutton,.region-button, .gray-button, .write-green-button {
+.unactiveBtn, .activeBtn, .white-button, .nothing-button, .location-green-button, .disabled-write-button, .submitbutton, .cancelbutton, .registerbutton, .loginbutton,.region-button, .gray-button, .write-green-button {
     font-family: 'Pretendard-Bold';
 }
