--- a/src/style.css
+++ b/src/style.css
@@ -299,9 +299,26 @@ header {
   font-size: 20px;
 }
 
-.upload-img {
-  width: 400px;
+.upload-container {
+  user-select: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
+  width: 100%;
+}
+
+.upload-buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.uploaded-image {
+  max-width: 100%;
   height: auto;
+  margin-top: 10px;
 }
 
 .hide {
@@ -326,7 +343,7 @@ header {
   color: #4CAF50;
   border: 2px dashed #4CAF50;
   border-radius: 10px;
-  width : 380px;
+  width : 350px;
   height: 240px;
   text-align : center;
   line-height: 240px;
@@ -344,10 +361,8 @@ header {
   border-color:  #388e3c;
 }
 
-
-
 .uploaded-image {
-  width: 100%;
+  width: 30%;
   height: auto;
 }
 
