--- a/src/container/pages/Community/Paging.css
+++ b/src/container/pages/Community/Paging.css
@@ -22,4 +22,8 @@
     background-color: #D9d9d9;
     border: 1px solid #d9d9d9;
   }
-  
+  .pagination .active-page a {
+    color: #388E3c;
+    border-radius: 24px;
+    padding: 5px 10px;
+  }
