--- a/src/container/pages/Solution.css
+++ b/src/container/pages/Solution.css
@@ -6,7 +6,7 @@ textarea.solution-input {
     border-radius: 5px;
     font-size: 16px;
     box-sizing: border-box;
-    resize: vertical;
+    resize: none;
     font-family: 'Pretendard-Bold';
   }
   
