--- a/src/container/pages/Categories.css
+++ b/src/container/pages/Categories.css
@@ -1,23 +1,101 @@
 .categories-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-    margin-top: 20px;
+  margin: 20px;
+}
+
+.categories-container h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.categories-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.category-button {
+  background-color: #3b855d;
+  color : white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  font-family: 'Pretendard-Bold';
+}
+
+.category-button:hover, .category-button.active {
+  background-color: #255f40;
+}
+
+.categories-data-list {
+  margin-top: 20px;
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Added shadow */
+  border-radius: 8px; /* Added border-radius for a smoother look */
+  margin-bottom: 10px;
+}
+
+.data-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.data-item-image img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.data-item-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.data-item-name {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.data-item-tags {
+  font-size: 14px;
+  color: #888;
+}
+
+@media (min-width: 1200px) {
+  .categories-buttons, .categories-data-list {
+    width: 700px;
   }
-  
-  .category-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .categories-buttons, .categories-data-list {
+    width: 600px;
   }
-  
-  .category-button:hover {
-    background-color: #45a049;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .categories-buttons, .categories-data-list {
+    width: 500px;
   }
-  
+}
+
+@media (max-width: 767px) {
+  .categories-buttons, .categories-data-list {
+    width: 100%;
+  }
+}
+
+@font-face {
+  font-family: 'Pretendard-Bold';
+  src: url("../../fonts/Pretendard-Bold.woff2") format('truetype'); }
