--- a/src/container/pages/DaeguPolicy.css
+++ b/src/container/pages/DaeguPolicy.css
@@ -46,3 +46,26 @@
     font-weight: bold;
     height : 220px;
   }
+
+  .region-button {
+    margin-top : 5px;
+    padding: 8px 20px;
+    background-color: #6C8D40;
+    color: white;
+    font-size: 16px;
+    border: none;
+    height:38px;
+    border-radius: 12px 12px 0 0;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.25);
+  }
+    
+  .region-button:focus {
+    outline: none;
+  }
+
+  .region-button.active {
+    color:#6C8D40;
+    background-color: white;
+  }
