--- a/src/container/pages/MyPageForm.css
+++ b/src/container/pages/MyPageForm.css
@@ -1,38 +1,51 @@
+.padding-layout{
+  margin-top:600px;
+  display: flex;
+  width: 1920px;
+  flex-direction: column;
+  align-items: center;
+  background: #FFF;
+}
 .myPage {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  user-select: none;
+  display: flex;
+  padding: 100px 400px 0 400px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 90px;
+  border: 1px solid #D9D9D9;
 }
 
 .myPage h2 {
-  color: #333;
+  color: #424242;
   text-align: center;
-  margin-bottom: 20px;
+  font-family: Pretendard;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-.accountInfo {
-  padding: 20px;
-}
 
-.accountInfo .section {
-  margin-bottom: 20px;
-}
 
 .accountInfo .section h3 {
-  margin-bottom: 10px;
-  font-size: 18px;
-  color: #333;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 5px;
+  display: flex;
+  width: 400px;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .accountInfo ul {
-  list-style: none;
-  padding: 0;
+  color: #424242;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  list-style:none;
+  padding : 0;
 }
 
 .accountInfo ul li {
