--- a/src/container/pages/RegisterForm.css
+++ b/src/container/pages/RegisterForm.css
@@ -2,6 +2,7 @@
     user-select: none;
     display: flex;
     padding: 100px 400px;
+    margin-top:400px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -111,6 +112,7 @@
 }
 
 .register-submit-button{
+    border : none;
     cursor: pointer;
     display: flex;
     width: 180px;
@@ -132,6 +134,7 @@
 }
 
 .register-cancel-button{
+    border : none;
     display: flex;
     width: 180px;
     height: 56px;
