--- a/src/container/pages/MyPageForm.css
+++ b/src/container/pages/MyPageForm.css
@@ -8,7 +8,7 @@
 }
 .myPage {
   display: flex;
-  padding: 100px 400px 0 400px;
+  padding: 100px 400px 100px 400px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
